--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiofiles==0.8.0
+aiofiles>=23.2.0
 async-timeout==5.0.1
 androidstorage4kivy==0.1.1
 briefcase==0.3.22
@@ -39,3 +39,7 @@ pywin32>=2.2.8
 bulldozer-dtm==1.1.0
 flask==3.1.0
 flask_socketio==5.5.1
+fastapi>=0.104.0
+uvicorn==0.34.3
+websockets>=12.0
+python-multipart>=0.0.6
