--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,10 @@ scipy>=1.11.0
 sounddevice>=0.4.6
 scikit-learn>=1.6.1
 tenacity>=9.0.0
-vosk>=0.3.45
+openai-whisper>=20231117
+torch>=2.1.0
+torchaudio>=2.1.0
+transformers>=4.35.0
 pywin32>=306; sys_platform == "win32"
 flask==3.1.0
 flask_socketio==5.5.1
@@ -34,3 +37,62 @@ hmmlearn==0.3.3
 imbalanced-learn==0.14.0
 pyloudnorm==0.1.1
 noisereduce==3.0.3
+openai-whisper==20250625
+fsspec==2025.9.0
+mpmath==1.3.0
+networkx==3.5
+setuptools==80.9.0
+sympy==1.14.0
+tiktoken==0.11.0
+torch==2.8.0
+pyannote.audio==3.3.2
+pyannote.core==5.0.0 
+pyannote.database==5.1.3 
+pyannote.metrics==3.2.1 
+pyannote.pipeline==3.0.1 
+Mako==1.3.10 
+PyYAML==6.0.2
+aiohappyeyeballs==2.6.1 
+aiohttp==3.12.15 
+aiosignal==1.4.0 
+alembic==1.16.5 
+antlr4-python3-runtime==4.9.3 
+asteroid-filterbanks==0.4.0 
+attrs==25.3.0 
+colorlog==6.9.0 
+docopt==0.6.2 
+einops==0.8.1 
+frozenlist==1.7.0 
+greenlet==3.2.4 
+huggingface-hub==0.34.4 
+hyperpyyaml==1.2.2 
+julius==0.2.7 
+lightning==2.5.4 
+lightning-utilities==0.15.2 
+multidict==6.6.4 
+omegaconf==2.3.0 
+optuna==4.5.0 
+pandas==2.3.2 
+primePy==1.3 
+propcache==0.3.2 
+protobuf==6.32.0 
+pytorch-lightning==2.5.4 
+pytorch-metric-learning==2.9.0 
+pytz==2025.2 
+ruamel.yaml==0.18.15 
+ruamel.yaml.clib==0.2.12 
+semver==3.0.4 
+sentencepiece==0.2.1 
+shellingham==1.5.4 
+sortedcontainers==2.4.0 
+speechbrain==1.0.3 
+sqlalchemy==2.0.43 
+tabulate==0.9.0 
+tensorboardX==2.6.4 
+torch-audiomentations==0.12.0 
+torch-pitch-shift==1.2.5 
+torchaudio==2.8.0 
+torchmetrics==1.8.2 
+typer==0.17.3 
+tzdata==2025.2 
+yarl==1.20.1
