--- a/requirements.txt
+++ b/requirements.txt
@@ -22,9 +22,6 @@ scipy>=1.11.0
 sounddevice>=0.4.6
 scikit-learn>=1.6.1
 tenacity>=9.0.0
-openai-whisper>=20231117
-torch>=2.1.0
-torchaudio>=2.1.0
 transformers>=4.35.0
 pywin32>=306; sys_platform == "win32"
 flask==3.1.0
@@ -44,7 +41,6 @@ networkx==3.5
 setuptools==80.9.0
 sympy==1.14.0
 tiktoken==0.11.0
-torch==2.8.0
 pyannote.audio==3.3.2
 pyannote.core==5.0.0 
 pyannote.database==5.1.3 
@@ -89,10 +85,13 @@ speechbrain==1.0.3
 sqlalchemy==2.0.43 
 tabulate==0.9.0 
 tensorboardX==2.6.4 
+torch==2.8.0
 torch-audiomentations==0.12.0 
 torch-pitch-shift==1.2.5 
 torchaudio==2.8.0 
+torchvision==0.23.0
 torchmetrics==1.8.2 
+torchcodec==0.0.0.dev0
 typer==0.17.3 
 tzdata==2025.2 
 yarl==1.20.1
