--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,12 @@ Thumbs.db
 *.swp
 *.swo
 
+# Backup files
 backups/
+
+# Preference files
+preferences.txt
+*.prefs
+config/local_*
+.env.local
+problems.txt
