--- a/requirements.txt
+++ b/requirements.txt
@@ -30,12 +30,13 @@ fastapi>=0.104.0
 uvicorn==0.34.3
 websockets>=12.0
 python-multipart>=0.0.6
+jinja2>=3.1.0
 hmmlearn==0.3.3
 imbalanced-learn==0.14.0
 pyloudnorm==0.1.1
 noisereduce==3.0.3
 openai-whisper==20250625
-fsspec==2025.9.0
+fsspec>=2024.6.1,<2025.0.0
 mpmath==1.3.0
 networkx==3.5
 setuptools==80.9.0
