--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,50 @@
-aiofiles>=23.2.0
-async-timeout>=5.0.1
-eyed3>=0.9.7
-librosa>=0.10.1
-matplotlib>=3.8.3
-numpy>=1.24.0
-pyAudioAnalysis>=0.3.14
-pytest>=8.3.4
-pytest-asyncio>=0.23.3
-pytest-mock>=3.12.0
-pytest-cov>=3.0
-pytest-timeout>=2.1.0
-python-dotenv>=1.0.1
-psutil>=5.9.0
-pydub>=0.25.1
-plotly>=6.0.0
-regex>=2023.10.3
-requests>=2.31.0
-soundfile>=0.12.1
-static-ffmpeg>=2.5
-scipy>=1.11.0
-sounddevice>=0.4.6
-scikit-learn>=1.6.1
-tenacity>=9.0.0
-transformers>=4.35.0
-# Web framework (Docker-optimized)
-flask==3.1.0
-flask_socketio==5.5.1
-fastapi>=0.104.0
-uvicorn[standard]==0.34.3
-websockets>=12.0
-python-multipart>=0.0.6
-jinja2>=3.1.0
-hmmlearn==0.3.3
-imbalanced-learn==0.14.0
-pyloudnorm==0.1.1
-noisereduce==3.0.3
-openai-whisper==20250625
-fsspec>=2024.6.1,<2025.0.0
-mpmath==1.3.0
-networkx==3.5
-setuptools==80.9.0
-sympy==1.14.0
-tiktoken==0.11.0
-Mako==1.3.10 
-PyYAML==6.0.2
-aiohappyeyeballs==2.6.1 
-aiohttp==3.12.15 
-aiosignal==1.4.0 
-alembic==1.16.5 
-antlr4-python3-runtime==4.9.3 
-asteroid-filterbanks==0.4.0 
-attrs==25.3.0 
-colorlog==6.9.0 
-docopt==0.6.2 
-einops==0.8.1 
-frozenlist==1.7.0 
-greenlet==3.2.4 
-huggingface-hub==0.34.4 
-hyperpyyaml==1.2.2 
-julius==0.2.7 
-lightning==2.5.4 
-lightning-utilities==0.15.2 
-multidict==6.6.4 
-omegaconf==2.3.0 
-optuna==4.5.0 
-pandas==2.3.2 
-primePy==1.3 
-propcache==0.3.2 
-protobuf==6.32.0 
-pytorch-lightning==2.5.4 
-pytorch-metric-learning==2.9.0 
-pytz==2025.2 
-ruamel.yaml==0.18.15 
-ruamel.yaml.clib==0.2.12 
-semver==3.0.4 
-sentencepiece==0.2.1 
-shellingham==1.5.4 
-sortedcontainers==2.4.0 
-speechbrain==1.0.3 
-sqlalchemy==2.0.43 
-tabulate==0.9.0 
-tensorboardX==2.6.4 
-torch==2.8.0
-torch-audiomentations==0.12.0 
-torch-pitch-shift==1.2.5 
-torchaudio==2.8.0 
-torchvision==0.23.0
-torchmetrics==1.8.2 
-typer==0.17.3 
-tzdata==2025.2 
-yarl==1.20.1
+# TranscrevAI Requirements
+
+# Core AI/ML
+openai-whisper>=20231117
+faster-whisper>=1.0.0,<2.0.0
+torch>=2.8.0
+torchaudio>=2.8.0
+torchvision>=0.23.0
+numpy>=1.24.0,<2.0.0
+scipy==1.16.2
+
+# Audio Processing / Real-time Recording
+librosa>=0.10.1,<1.0.0
+soundfile>=0.12.1,<1.0.0
+static-ffmpeg>=2.5,<3.0.0
+pyaudio>=0.2.11
+
+# ML/Clustering
+scikit-learn>=1.0.0,<2.0.0  
+
+# Web framework 
+fastapi>=0.104.0,<1.0.0
+uvicorn[standard]>=0.24.0,<1.0.0
+websockets>=12.0,<13.0.0
+python-multipart>=0.0.6,<1.0.0
+jinja2>=3.1.0,<4.0.0
+
+# File operations / System monitoring
+aiofiles>=23.2.0,<24.0.0  
+psutil>=5.9.0,<6.0.0  
+
+
+# Utilities
+python-dotenv>=1.0.1,<2.0.0  
+requests>=2.31.0,<3.0.0  
+
+# HuggingFace optimizations
+huggingface_hub>=0.17.0,<1.0.0
+hf_xet>=1.1.0
+
+# INT8 quantization dependencies
+protobuf>=4.21.0,<5.0.0
+packaging>=23.0  
+
+# Audio format support / Processing
+pydub>=0.25.1,<1.0.0  
+
+# Testing framework 
+pytest>=8.3.4,<9.0.0; extra == "test"
+pytest-asyncio>=0.23.3,<1.0.0; extra == "test"
