--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,11 @@
 # Core AI/ML
 openai-whisper>=20231117
 faster-whisper>=1.0.0,<2.0.0
-torch>=2.8.0
-torchaudio>=2.8.0
-torchvision>=0.23.0
+torch>=2.3.0
+torchaudio>=2.3.0
+torchvision>=0.18.0
 numpy>=1.24.0,<2.0.0
-scipy==1.16.2
+scipy>=1.13.0
 
 # Audio Processing / Real-time Recording
 librosa>=0.10.1,<1.0.0
@@ -28,7 +28,7 @@ jinja2>=3.1.0,<4.0.0
 # File operations / System monitoring
 aiofiles>=23.2.0,<24.0.0  
 psutil>=5.9.0,<6.0.0  
-
+GPUtil>=1.4.0
 
 # Utilities
 python-dotenv>=1.0.1,<2.0.0  
@@ -46,5 +46,5 @@ packaging>=23.0
 pydub>=0.25.1,<1.0.0  
 
 # Testing framework 
-pytest>=8.3.4,<9.0.0; extra == "test"
-pytest-asyncio>=0.23.3,<1.0.0; extra == "test"
+pytest>=8.3.4,<9.0.0
+pytest-asyncio>=0.23.3,<1.0.0
