Add silero/vad as submodule- fix

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "silero-vad"]
 	path = silero-vad
 	url = https://github.com/snakers4/silero-vad.git
+[submodule "src/silero-vad"]
+	path = src/silero-vad
+	url = https://github.com/snakers4/silero-vad.git
