--- a/requirements.txt
+++ b/requirements.txt
@@ -129,6 +129,7 @@ propcache==0.3.2
 proto-plus==1.26.1
 protobuf==5.29.5
 psutil==5.9.8
+pyannote.audio>=3.1
 pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -176,7 +177,6 @@ scipy==1.16.2
 semver==3.0.4
 sentencepiece==0.2.1
 shellingham==1.5.4
-silero-vad==6.0.0
 simple-websocket==1.1.0
 six==1.17.0
 sniffio==1.3.1
@@ -186,7 +186,6 @@ sounddevice==0.5.2
 soundfile==0.13.1
 soxr==0.5.0.post1
 specify-cli @ git+https://github.com/github/spec-kit.git@b18ef208cb8ba7b1eba04fe5dfcf3c24fda84a3e
-speechbrain==1.0.3
 SQLAlchemy==2.0.43
 sse-starlette==3.0.2
 starlette==0.47.3
