Last medium model working version - optimized small model incoming

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,6 @@
 [pytest]
-asyncio_mode = strict
 testpaths = tests
-norecursedirs = dev_tools
+norecursedirs = dev_tools venv
 python_files = test_*.py
 markers =
     timeout: mark test to timeout
@@ -10,5 +9,3 @@ markers =
 filterwarnings =
     ignore::DeprecationWarning
     ignore::ResourceWarning
-# temp_path_retention_policy = failed
-asyncio_default_fixture_loop_scope = function
