--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+--index-url https://download.pytorch.org/whl/cpu
+torch==2.2.0
+torchaudio==2.2.0
+--index-url https://pypi.org/simple
+
 aiofiles==23.2.1
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
@@ -47,7 +52,7 @@ jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 kiwisolver==1.4.9
 lazy_loader==0.4
-librosa
+librosa==0.10.1
 llvmlite==0.44.0
 Mako==1.3.10
 markdown-it-py==4.0.0
@@ -73,7 +78,7 @@ propcache==0.3.2
 proto-plus==1.26.1
 protobuf==5.29.5
 psutil==5.9.8
-pyannote.audio>=3.1
+pyannote.audio==3.3.2
 PyAudio==0.2.14
 pycparser==2.22
 pydantic==2.11.7
@@ -112,8 +117,6 @@ sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tokenizers==0.21.4
-torch==2.1.2
-torchaudio==2.1.2
 tqdm==4.67.1
 transformers==4.53.3
 truststore==0.10.4
