--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,6 +6,7 @@ pytest-cov==6.2.1
 pytest-mock==3.14.1
 pytest-timeout==2.4.0
 coverage==7.10.6
+pytest-profiling
 
 # Testing utilities - Audio analysis for benchmarks
 librosa
