feat: Implement comprehensive test suite and production hardening
- Add rate limiting (slowapi): 10/min upload, 20/min WebSocket connections.
- Implement frontend resilience: WebSocket timeout, auto-retry with exponential backoff, and heartbeat pings.
- Create complete test suite (33 tests):
  - Unit tests (17): for services, validators, and file manager.
  - Edge cases (7): invalid formats, corrupted audio, abrupt disconnects.
  - Performance (4): startup time, memory usage, and stability.
  - Accuracy (3): WER, diarization, and profiling.
  - E2E (2): WebSocket flow and upload endpoint.
- Consolidate tests: Cannibalize test_unit.py and test_integration.py, moving their logic to the new, organized suite.
- Organize profiling artifacts: Move prof/ directory and its contents to tests/prof/.
- Fix bugs: Correct worker error notifications, resolve an issue in the STOP command handler, and fix multiple type errors.

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,9 @@ markers =
     timeout: mark test to timeout
     benchmark: mark test as benchmark
     asyncio: mark test as async
+    performance: mark test as performance test
+    accuracy: mark test as accuracy test
+    profiling: mark test as profiling test
 filterwarnings =
     ignore::DeprecationWarning
     ignore::ResourceWarning
