--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -34,3 +34,9 @@ docutils==0.22
 
 # Package management tools
 uv==0.8.17
+httpx==0.27.1
+httpx-ws
+
+# WebSocket client for integration testing
+websockets==13.1
+requests
