Refactoring and UX improvements: Code clenaup, refactoring, and improve live recording and upload state management. Client-side state handling for live recording and file uploads, including unique sessions, WebSocket cleanup, and user-confirmed conflict resolution

--- a/.dockerignore
+++ b/.dockerignore
@@ -38,7 +38,6 @@ ENV/
 *.swp
 *.swo
 *~
-transcrevai-windows-3089b18f1ba0.json
 .claude/
 
 # Test files
@@ -69,9 +68,10 @@ README.md
 docs/
 *.md
 
-# Docker files (except this ignore file)
-Dockerfile.*
-docker-compose.override.yml
+# Docker files (except the present)
+Dockerfile
+docker-compose.yml
+docker-compose.dev.yml
 
 # Node modules (if any)
 node_modules/
@@ -89,8 +89,3 @@ Thumbs.db
 *.tmp
 *.temp
 *.log
-
-# IDE files
-.spyderproject
-.spyproject
-.ropeproject
