--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,10 @@
+# Include production dependencies
+-r requirements.txt
+
 # Development Dependencies
 # Testing frameworks
 pytest==8.4.2
-pytest-asyncio==1.1.0
+pytest-asyncio>=0.21.0
 pytest-cov==6.2.1
 pytest-mock==3.14.1
 pytest-timeout==2.4.0
@@ -9,10 +12,8 @@ coverage==7.10.6
 pytest-profiling
 
 # Testing utilities - Audio analysis for benchmarks
-librosa
 jiwer==4.0.0
 rapidfuzz==3.14.1
-
 
 # Code quality and linting
 vulture==2.14
@@ -25,18 +26,5 @@ readme_renderer==44.0
 # Documentation
 docutils==0.22
 
-# Jupyter/notebook support (if needed)
-# matplotlib==3.10.6
-# contourpy==1.3.3
-# cycler==0.12.1
-# fonttools==4.59.2
-# kiwisolver==1.4.9
-
 # Package management tools
 uv==0.8.17
-httpx==0.27.1
-httpx-ws
-
-# WebSocket client for integration testing
-websockets==13.1
-requests
