--- a/requirements.txt
+++ b/requirements.txt
@@ -127,7 +127,7 @@ uritemplate==4.2.0
 urllib3==2.5.0
 uvicorn==0.34.3
 watchfiles==1.1.0
-websockets==12.0
+websockets>=12.0,<14.0
 wsproto==1.2.0
 yarl==1.20.1
 zipp==3.23.0
