refactoring(project): final refactoring

--- a/docker-compose.pull.yml
+++ b/docker-compose.pull.yml
@@ -1,10 +1,6 @@
 services:
   transcrevai:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        HUGGING_FACE_HUB_TOKEN: ${HUGGING_FACE_HUB_TOKEN}
+    image: hiperim/transcrevai:latest
     ports:
       - "8000:8000"
     volumes:
